--- a/src/main/java/ui/SuaSoLuongSanPhamJDailog.form
+++ b/src/main/java/ui/SuaSoLuongSanPhamJDailog.form
@@ -97,7 +97,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblTenSanPham">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jLabel2"/>
+        <Property name="text" type="java.lang.String" value="T&#xea;n s&#x1ea3;n ph&#x1ea9;m:"/>
       </Properties>
     </Component>
   </SubComponents>
